--- a/Content/app.css
+++ b/Content/app.css
@@ -131,13 +131,13 @@
 
 
 
-#footerwrap {
+footer {
 	padding-top: 70px;
 	padding-bottom: 50px;
 	background-color: #2f2f2f;
 }
 
-#footerwrap p {
+footer p {
 	color: #f2f2f2;
 	margin-left: 10px;
 }
